examples/test/testpolicy17938.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17938
  namespace: namespace151
spec:
  podSelector:
    matchLabels:
      key20: value37
      key7: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value6
          key49: value9
      podSelector:
        matchLabels:
          key45: value16
          key32: value42
          key9: value40
